{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 111,
  "lineage": "87671f6f-6e4f-2e8c-bb85-8fe11b0292cc",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy",
      "name": "AzureFirewallCapture",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "base_policy_id": "",
            "child_policies": [],
            "dns": [],
            "firewalls": [],
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/firewallPolicies/fwpolicy-1",
            "identity": [],
            "intrusion_detection": [],
            "location": "westeurope",
            "name": "fwpolicy-1",
            "private_ip_ranges": [],
            "resource_group_name": "rg-AzureFirewallCapture",
            "rule_collection_groups": [
              "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/firewallPolicies/fwpolicy-1/ruleCollectionGroups/fwpolicy-rcg"
            ],
            "sku": "Standard",
            "tags": {},
            "threat_intelligence_allowlist": [],
            "threat_intelligence_mode": "Alert",
            "timeouts": null,
            "tls_certificate": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_firewall_policy_rule_collection_group",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "application_rule_collection": [
              {
                "action": "Allow",
                "name": "app_rule_collection1_rule1",
                "priority": 300,
                "rule": [
                  {
                    "description": "",
                    "destination_addresses": [],
                    "destination_fqdn_tags": [],
                    "destination_fqdns": [
                      "*"
                    ],
                    "destination_urls": [],
                    "name": "network_rule_collection1_rule1",
                    "protocols": [
                      {
                        "port": 443,
                        "type": "Https"
                      },
                      {
                        "port": 80,
                        "type": "Http"
                      }
                    ],
                    "source_addresses": [
                      "*"
                    ],
                    "source_ip_groups": [],
                    "terminate_tls": false,
                    "web_categories": []
                  }
                ]
              }
            ],
            "firewall_policy_id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/firewallPolicies/fwpolicy-1",
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/firewallPolicies/fwpolicy-1/ruleCollectionGroups/fwpolicy-rcg",
            "name": "fwpolicy-rcg",
            "nat_rule_collection": [],
            "network_rule_collection": [],
            "priority": 300,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall_policy.AzureFirewallCapture",
            "azurerm_resource_group.AzureFirewallCapture"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "cyclecloud",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/networkInterfaces/vm-FirewallCapture-nic",
            "internal_domain_name_suffix": "dpsexmmttknuhdrawp0igw2amd.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "ipconfig1",
                "primary": true,
                "private_ip_address": "10.6.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/admin"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-45-33-C7",
            "name": "vm-FirewallCapture-nic",
            "private_ip_address": "10.6.0.4",
            "private_ip_addresses": [
              "10.6.0.4"
            ],
            "resource_group_name": "rg-AzureFirewallCapture",
            "tags": {
              "BusinessUnit": "FirewallCaptureTest",
              "Category": "Cloud",
              "DataClassification": "Confidential",
              "Environment": "Dev",
              "Owner": "alexandre.jean@microsoft.com",
              "WorkloadName": "FirewallCaptureTest"
            },
            "virtual_machine_id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Compute/virtualMachines/vm-FirewallCapture-cyclecloud"
          },
          "dependencies": [
            "azurerm_public_ip.cycle",
            "azurerm_resource_group.AzureFirewallCapture",
            "azurerm_subnet.admin",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/publicIPAddresses/pip-bastion-FirewallCapture",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.101.217.53",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-bastion-FirewallCapture",
            "resource_group_name": "rg-AzureFirewallCapture",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/publicIPAddresses/pip-firewall-FirewallCapture",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.93.228.136",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pip-firewall-FirewallCapture",
            "resource_group_name": "rg-AzureFirewallCapture",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/routeTables/rt-FirewallCapture/routes/route-FirewallCapture",
            "name": "route-FirewallCapture",
            "next_hop_in_ip_address": "10.6.1.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "rg-AzureFirewallCapture",
            "route_table_name": "rt-FirewallCapture",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.FirewallCapture",
            "azurerm_public_ip.firewall",
            "azurerm_resource_group.AzureFirewallCapture",
            "azurerm_route_table.route-table",
            "azurerm_subnet.firewall",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/routeTables/rt-FirewallCapture",
            "location": "westeurope",
            "name": "rt-FirewallCapture",
            "resource_group_name": "rg-AzureFirewallCapture",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "route-FirewallCapture",
                "next_hop_in_ip_address": "10.6.1.4",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/admin"
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.6.0.0/28",
            "address_prefixes": [
              "10.6.0.0/28"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/admin",
            "name": "admin",
            "resource_group_name": "rg-AzureFirewallCapture",
            "virtual_network_name": "vn-FirewallCapture"
          },
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.6.2.0/26",
            "address_prefixes": [
              "10.6.2.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/AzureBastionSubnet",
            "name": "AzureBastionSubnet",
            "resource_group_name": "rg-AzureFirewallCapture",
            "virtual_network_name": "vn-FirewallCapture"
          },
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.6.1.0/26",
            "address_prefixes": [
              "10.6.1.0/26"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "rg-AzureFirewallCapture",
            "virtual_network_name": "vn-FirewallCapture"
          },
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "ta-admin",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/admin",
            "route_table_id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/routeTables/rt-FirewallCapture",
            "subnet_id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/admin"
          },
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture",
            "azurerm_route_table.route-table",
            "azurerm_subnet.admin",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.6.0.0/16"
            ],
            "guid": "b14be41b-9a93-439b-8e20-b3f4835b8063",
            "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture",
            "location": "westeurope",
            "name": "vn-FirewallCapture",
            "resource_group_name": "rg-AzureFirewallCapture",
            "subnet": [
              {
                "address_prefix": "10.6.0.0/28",
                "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/admin",
                "name": "admin"
              },
              {
                "address_prefix": "10.6.1.0/26",
                "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.6.2.0/26",
                "id": "/subscriptions/45b6357e-b3b3-4e92-8c9a-5216d9813ded/resourceGroups/rg-AzureFirewallCapture/providers/Microsoft.Network/virtualNetworks/vn-FirewallCapture/subnets/AzureBastionSubnet",
                "name": "AzureBastionSubnet"
              }
            ],
            "tags": {
              "BusinessUnit": "FirewallCaptureTest",
              "Category": "Cloud",
              "DataClassification": "Confidential",
              "Environment": "Dev",
              "Owner": "alexandre.jean@microsoft.com",
              "WorkloadName": "FirewallCaptureTest"
            },
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.AzureFirewallCapture"
          ]
        }
      ]
    }
  ]
}